# Tire_site_fastapi

./: pyproject.toml  requirements.txt
src/: config.py  main.py
src/database/: crud.py  database.py  models.py  orm.py  schemas.py
src/routers/: announcements.py  filters.py
