[tool.poetry]
name = "tire-site"
version = "0.1.0"
description = ""
authors = ["AndrewMedvedev <andrejmedvedev2713@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
